--- a/index.html
+++ b/index.html
@@ -13,9 +13,16 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;600;700;800&display=swap" rel="stylesheet">
     <!-- Project's built-in CSS files  -->
-    <link rel="stylesheet" href="main.css" /> 
+    <link rel="stylesheet" href="css/main.css" />
   </head>
   <body>
-
+    <main>
+      <header>
+        <img src="assets/logo/ohmyfood.png" />
+      </header>
+      <section class="geo">
+          <i class="fa-solid fa-location-dot"></i> Paris, Belleville
+      </section> <!-- ./.geo -->
+    </main>
   </body>
 </html>
