Adds second section.

--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
           <a class="explore-btn">Explorer nos restaurants</a>
         </p>
       </section> <!-- /.explore -->
+      <section class="features">
+        <h2>Fonctionnement</h2>
+      </section> <!-- /.features -->
+      </section>
     </main>
   </body>
 </html>
