:feat: app features section

--- a/index.html
+++ b/index.html
@@ -16,13 +16,18 @@
     <link rel="stylesheet" href="css/main.css" />
   </head>
   <body>
+    
+    <header>
+      <img src="assets/logo/ohmyfood.png" />
+    </header>
+
     <main>
-      <header>
-        <img src="assets/logo/ohmyfood.png" />
-      </header>
+
       <section class="geo">
           <i class="fa-solid fa-location-dot"></i>Paris, Belleville
       </section> <!-- ./.geo -->
+
+
       <section class="explore">
         <h1>Réservez le menu qui vous convient</h1>
         <p>
@@ -32,10 +37,34 @@
           <a class="explore-btn">Explorer nos restaurants</a>
         </p>
       </section> <!-- /.explore -->
+
+
       <section class="features">
         <h2>Fonctionnement</h2>
+        <!-- Item #1 -->
+        <div class="item">
+          <p class="circle">1</p>
+          <p>
+            <i class="fa-solid fa-mobile-screen"></i>Choisissez un restaurant
+          </p>
+        </div> <!-- /.item -->
+        <!-- Item #2 -->
+        <div class="item">
+          <p class="circle">2</p>
+          <p>
+            <i class="fa-solid fa-list"></i>Composez votre menu
+          </p>
+        </div> <!-- /.item -->
+        <!-- Item #3 -->
+        <div class="item">
+          <p class="circle">3</p>
+          <p>
+            <i class="fa-solid fa-bowl-food"></i>Dégustez au restaurant
+          </p>
+        </div> <!-- /.item -->
       </section> <!-- /.features -->
-      </section>
+
+
     </main>
   </body>
 </html>
