:feat: app restaurants cards model

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="css/main.css" />
   </head>
   <body>
-    
+
     <header>
       <img src="assets/logo/ohmyfood.png" />
     </header>
@@ -64,6 +64,14 @@
         </div> <!-- /.item -->
       </section> <!-- /.features -->
 
+      <section class="restaurants">
+        <h2>Restaurants</h2>
+        <div class="card taste">
+          <img src="assets/restaurants/1.jpg" />
+          <h3>La note enchantée</h3>
+          <p>Charonne</p>
+        </div>
+      </section>
 
     </main>
   </body>
