:feat: restaurants section has been completed

--- a/index.html
+++ b/index.html
@@ -66,12 +66,46 @@
 
       <section class="restaurants">
         <h2>Restaurants</h2>
-        <div class="card taste">
-          <img src="assets/restaurants/1.jpg" />
-          <h3>La note enchantée</h3>
-          <p>Charonne</p>
-        </div>
-      </section>
+
+        <!-- La palette du gout -->
+        <section class="restaurant">
+          <div class="card">
+            <div class="new">Nouveau</div>
+            <img src="assets/restaurants/1.jpg" />
+            <h3>La palette du gout</h3>
+            <p>Ménilmontant</p>
+          </div>
+        </section> <!-- /.restaurant -->
+
+        <!-- La note enchantée -->
+        <section class="restaurant">
+          <div class="card">
+            <div class="new">Nouveau</div>
+            <img src="assets/restaurants/2.jpg" />
+            <h3>La note enchantée</h3>
+            <p>Charonne</p>
+          </div>
+        </section> <!-- /.restaurant -->
+
+        <!-- A la française -->
+        <section class="restaurant">
+          <div class="card">
+            <img src="assets/restaurants/3.jpg" />
+            <h3>A la française</h3>
+            <p>Cité Rouge</p>
+          </div>
+        </section> <!-- /.restaurant -->
+
+        <!-- Le délice des sens -->
+        <section class="restaurant">
+          <div class="card">
+            <img src="assets/restaurants/4.jpg" />
+            <h3>A la française</h3>
+            <p>Folie Méricourt</p>
+          </div>
+        </section> <!-- /.restaurant -->
+
+    </section> <!-- /.restaurants -->
 
     </main>
   </body>
