:fix: restaurants card size fixed

--- a/index.html
+++ b/index.html
@@ -72,8 +72,15 @@
           <div class="card">
             <div class="new">Nouveau</div>
             <img src="assets/restaurants/1.jpg" />
-            <h3>La palette du gout</h3>
-            <p>Ménilmontant</p>
+            <div class="flex">
+              <div>
+                <h3>La palette du gout</h3>
+                <p>Ménilmontant</p>
+              </div>
+              <div>
+                <i class="fa-regular fa-heart"></i>
+              </div>
+            </div> <!-- /.flex -->
           </div>
         </section> <!-- /.restaurant -->
 
@@ -82,17 +89,31 @@
           <div class="card">
             <div class="new">Nouveau</div>
             <img src="assets/restaurants/2.jpg" />
-            <h3>La note enchantée</h3>
-            <p>Charonne</p>
-          </div>
+            <div class="flex">
+              <div>
+                <h3>La note enchantée</h3>
+                <p>Charonne</p>
+              </div>
+              <div>
+                <i class="fa-regular fa-heart"></i>
+              </div>
+            </div> <!-- /.flex -->
+          </div> <!-- /.card -->
         </section> <!-- /.restaurant -->
 
         <!-- A la française -->
         <section class="restaurant">
           <div class="card">
             <img src="assets/restaurants/3.jpg" />
-            <h3>A la française</h3>
-            <p>Cité Rouge</p>
+            <div class="flex">
+              <div>
+                <h3>A la française</h3>
+                <p>Cité Rouge</p>
+              </div>
+              <div>
+                <i class="fa-regular fa-heart"></i>
+              </div>
+            </div> <!-- /.flex -->
           </div>
         </section> <!-- /.restaurant -->
 
@@ -100,8 +121,15 @@
         <section class="restaurant">
           <div class="card">
             <img src="assets/restaurants/4.jpg" />
-            <h3>A la française</h3>
-            <p>Folie Méricourt</p>
+            <div class="flex">
+              <div>
+                <h3>A la française</h3>
+                <p>Folie Méricourt</p>
+              </div>
+              <div>
+                <i class="fa-regular fa-heart"></i>
+              </div>
+            </div> <!-- /.flex -->
           </div>
         </section> <!-- /.restaurant -->
 
