:feat: implement footer

--- a/index.html
+++ b/index.html
@@ -132,8 +132,17 @@
             </div> <!-- /.flex -->
           </div>
         </section> <!-- /.restaurant -->
-
     </section> <!-- /.restaurants -->
+
+    <section class="footer">
+      <img src="assets/logo/ohmyfood@2x.svg" />
+      <ul>
+        <li>Proposer un restaurant</li>
+        <li>Devenir partenaire</li>
+        <li>Mention légale</li>
+        <li>Contact</li>
+      </ul>
+    </section>
 
     </main>
   </body>
