--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
   </head>
   <body>
 
+  <main>
+
     <header>
       <img src="assets/logo/ohmyfood.png" />
     </header>
-
-    <main>
 
       <section class="geo">
           <i class="fa-solid fa-location-dot"></i>Paris, Belleville
@@ -29,7 +29,7 @@
 
 
       <section class="explore">
-        <h1>Réservez le menu qui vous convient</h1>
+        <h2>Réservez le menu qui vous convient</h2>
         <p>
           Découvrez des restaurants d'exception, séléctionés par nos soins.
         </p>
@@ -134,16 +134,16 @@
         </section> <!-- /.restaurant -->
     </section> <!-- /.restaurants -->
 
-    <section class="footer">
+    </main>
+
+    <footer>
       <img src="assets/logo/ohmyfood@2x.svg" />
       <ul>
-        <li>Proposer un restaurant</li>
+        <li>Poposer un restaurant</li>
         <li>Devenir partenaire</li>
         <li>Mention légale</li>
         <li>Contact</li>
       </ul>
-    </section>
-
-    </main>
+    </footer>
   </body>
 </html>
