--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;700&display=swap" rel="stylesheet">
     <!-- Project's built-in CSS files  -->
     <link rel="stylesheet" href="css/main.css" />
+    <link rel="stylesheet" href="css/card_one.css" />
   </head>
   <body>
 
@@ -74,7 +76,11 @@
             <img src="assets/restaurants/1.jpg" />
             <div class="flex">
               <div>
-                <h3>La palette du gout</h3>
+                <h3>
+                    <a href="menus/card_one.html">
+                      La palette du gout
+                    </a>
+                </h3>
                 <p>Ménilmontant</p>
               </div>
               <div>
