--- a/index.html
+++ b/index.html
@@ -12,138 +12,135 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+    <!-- Project logo font -->
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;700&display=swap" rel="stylesheet">
     <!-- Project's built-in CSS files  -->
     <link rel="stylesheet" href="css/main.css" />
   </head>
   <body>
 
+  <header>
+    <img src="assets/logo/ohmyfood.png" />
+  </header>
+
   <main>
+    <section class="geo">
+        <i class="fa-solid fa-location-dot"></i>Paris, Belleville
+    </section> <!-- ./.geo -->
+    <section class="explore">
+      <h2>Réservez le menu qui vous convient</h2>
+      <p>
+        Découvrez des restaurants d'exception, séléctionés par nos soins.
+      </p>
+      <p class="explore-btn-container">
+        <a class="explore-btn">Explorer nos restaurants</a>
+      </p>
+    </section> <!-- /.explore -->
 
-    <header>
-      <img src="assets/logo/ohmyfood.png" />
-    </header>
 
-      <section class="geo">
-          <i class="fa-solid fa-location-dot"></i>Paris, Belleville
-      </section> <!-- ./.geo -->
-
-
-      <section class="explore">
-        <h2>Réservez le menu qui vous convient</h2>
+    <section class="features">
+      <h2>Fonctionnement</h2>
+      <!-- Item #1 -->
+      <div class="item">
+        <p class="circle">1</p>
         <p>
-          Découvrez des restaurants d'exception, séléctionés par nos soins.
+          <i class="fa-solid fa-mobile-screen"></i>Choisissez un restaurant
         </p>
-        <p class="explore-btn-container">
-          <a class="explore-btn">Explorer nos restaurants</a>
+      </div> <!-- /.item -->
+      <!-- Item #2 -->
+      <div class="item">
+        <p class="circle">2</p>
+        <p>
+          <i class="fa-solid fa-list"></i>Composez votre menu
         </p>
-      </section> <!-- /.explore -->
+      </div> <!-- /.item -->
+      <!-- Item #3 -->
+      <div class="item">
+        <p class="circle">3</p>
+        <p>
+          <i class="fa-solid fa-bowl-food"></i>Dégustez au restaurant
+        </p>
+      </div> <!-- /.item -->
+    </section> <!-- /.features -->
 
+    <section class="restaurants">
+      <h2>Restaurants</h2>
 
-      <section class="features">
-        <h2>Fonctionnement</h2>
-        <!-- Item #1 -->
-        <div class="item">
-          <p class="circle">1</p>
-          <p>
-            <i class="fa-solid fa-mobile-screen"></i>Choisissez un restaurant
-          </p>
-        </div> <!-- /.item -->
-        <!-- Item #2 -->
-        <div class="item">
-          <p class="circle">2</p>
-          <p>
-            <i class="fa-solid fa-list"></i>Composez votre menu
-          </p>
-        </div> <!-- /.item -->
-        <!-- Item #3 -->
-        <div class="item">
-          <p class="circle">3</p>
-          <p>
-            <i class="fa-solid fa-bowl-food"></i>Dégustez au restaurant
-          </p>
-        </div> <!-- /.item -->
-      </section> <!-- /.features -->
+      <!-- La palette du gout -->
+      <section class="restaurant">
+        <div class="card">
+          <div class="new">Nouveau</div>
+          <img src="assets/restaurants/1.jpg" />
+          <div class="flex">
+            <div>
+              <h3>La palette du gout</h3>
+              <p>Ménilmontant</p>
+            </div>
+            <div>
+              <i class="fa-regular fa-heart"></i>
+            </div>
+          </div> <!-- /.flex -->
+        </div>
+      </section> <!-- /.restaurant -->
 
-      <section class="restaurants">
-        <h2>Restaurants</h2>
+      <!-- La note enchantée -->
+      <section class="restaurant">
+        <div class="card">
+          <div class="new">Nouveau</div>
+          <img src="assets/restaurants/2.jpg" />
+          <div class="flex">
+            <div>
+              <h3>La note enchantée</h3>
+              <p>Charonne</p>
+            </div>
+            <div>
+              <i class="fa-regular fa-heart"></i>
+            </div>
+          </div> <!-- /.flex -->
+        </div> <!-- /.card -->
+      </section> <!-- /.restaurant -->
 
-        <!-- La palette du gout -->
-        <section class="restaurant">
-          <div class="card">
-            <div class="new">Nouveau</div>
-            <img src="assets/restaurants/1.jpg" />
-            <div class="flex">
-              <div>
-                <h3>La palette du gout</h3>
-                <p>Ménilmontant</p>
-              </div>
-              <div>
-                <i class="fa-regular fa-heart"></i>
-              </div>
-            </div> <!-- /.flex -->
-          </div>
-        </section> <!-- /.restaurant -->
+      <!-- A la française -->
+      <section class="restaurant">
+        <div class="card">
+          <img src="assets/restaurants/3.jpg" />
+          <div class="flex">
+            <div>
+              <h3>A la française</h3>
+              <p>Cité Rouge</p>
+            </div>
+            <div>
+              <i class="fa-regular fa-heart"></i>
+            </div>
+          </div> <!-- /.flex -->
+        </div>
+      </section> <!-- /.restaurant -->
 
-        <!-- La note enchantée -->
-        <section class="restaurant">
-          <div class="card">
-            <div class="new">Nouveau</div>
-            <img src="assets/restaurants/2.jpg" />
-            <div class="flex">
-              <div>
-                <h3>La note enchantée</h3>
-                <p>Charonne</p>
-              </div>
-              <div>
-                <i class="fa-regular fa-heart"></i>
-              </div>
-            </div> <!-- /.flex -->
-          </div> <!-- /.card -->
-        </section> <!-- /.restaurant -->
-
-        <!-- A la française -->
-        <section class="restaurant">
-          <div class="card">
-            <img src="assets/restaurants/3.jpg" />
-            <div class="flex">
-              <div>
-                <h3>A la française</h3>
-                <p>Cité Rouge</p>
-              </div>
-              <div>
-                <i class="fa-regular fa-heart"></i>
-              </div>
-            </div> <!-- /.flex -->
-          </div>
-        </section> <!-- /.restaurant -->
-
-        <!-- Le délice des sens -->
-        <section class="restaurant">
-          <div class="card">
-            <img src="assets/restaurants/4.jpg" />
-            <div class="flex">
-              <div>
-                <h3>A la française</h3>
-                <p>Folie Méricourt</p>
-              </div>
-              <div>
-                <i class="fa-regular fa-heart"></i>
-              </div>
-            </div> <!-- /.flex -->
-          </div>
-        </section> <!-- /.restaurant -->
+      <!-- Le délice des sens -->
+      <section class="restaurant">
+        <div class="card">
+          <img src="assets/restaurants/4.jpg" />
+          <div class="flex">
+            <div>
+              <h3>A la française</h3>
+              <p>Folie Méricourt</p>
+            </div>
+            <div>
+              <i class="fa-regular fa-heart"></i>
+            </div>
+          </div> <!-- /.flex -->
+        </div>
+      </section> <!-- /.restaurant -->
     </section> <!-- /.restaurants -->
-
-    </main>
-
-    <footer>
-      <img src="assets/logo/ohmyfood@2x.svg" />
-      <ul>
-        <li>Poposer un restaurant</li>
-        <li>Devenir partenaire</li>
-        <li>Mention légale</li>
-        <li>Contact</li>
-      </ul>
-    </footer>
+  </main>
+  <footer>
+    <h1>ohmyfood</h1>
+    <ul>
+      <li>Poposer un restaurant</li>
+      <li>Devenir partenaire</li>
+      <li>Mention légale</li>
+      <li>Contact</li>
+    </ul>
+  </footer>
   </body>
 </html>
