--- a/menus/card_one.html
+++ b/menus/card_one.html
@@ -12,7 +12,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;600;700;800&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Shrikhand:wght@400;500;700&display=swap" rel="stylesheet">
     <!-- Project built-in CSS -->
     <link rel="stylesheet" href="../css/main.css" />
     <link rel="stylesheet" href="../css/card_one.css" />
@@ -22,10 +22,19 @@
       <i class="fa-solid fa-arrow-left"></i> <img src="../assets/logo/ohmyfood.png" />
     </header>
     <main>
+      <!--
+
+            Restaurant menu
+
+      -->
       <section class="menu">
         <img src="../assets/restaurants/1.jpg" alt="Image de nourriture" />
         <div class="menu_card">
-          <h2>Le plaisir des sens</h2>
+          <!-- Restaurant title -->
+          <div class="title">
+            <h2>Le délices des sens</h2>
+            <i class="fa-regular fa-heart"></i>
+          </div> <!-- ./title -->
         </div> <!-- /.card_menu -->
       </section> <!-- /.menu -->
     </main>
@@ -33,4 +42,15 @@
       <!-- @TODO : merging -->
     </footer>
   </body>
+  <script>
+    var docWidth = document.documentElement.offsetWidth;
+    [].forEach.call(
+      document.querySelectorAll('*'),
+      function(el) {
+        if (el.offsetWidth > docWidth) {
+          console.log(el);
+        }
+      }
+    );
+  </script>
 </html>
