:feat: proper presentation of a menu for mentoring session

--- a/menus/card_one.html
+++ b/menus/card_one.html
@@ -35,6 +35,20 @@
             <h2>Le délices des sens</h2>
             <i class="fa-regular fa-heart"></i>
           </div> <!-- ./title -->
+          <!-- Card # 1 -->
+          <div class="card">
+            <h3>Tartare de thon</h3>
+            <p>
+              <span>Assaisonné de thon</span>
+              <span>25€</span>
+          </div> <!-- ./card -->
+          <!-- Card # 1 -->
+          <div class="card">
+            <h3>Bouchée de homard croustillant</h3>
+            <p>
+              <span>Et sa farandole de petits légumes</span>
+              <span>25€</span>
+          </div> <!-- ./card -->
         </div> <!-- /.card_menu -->
       </section> <!-- /.menu -->
     </main>
@@ -42,6 +56,8 @@
       <!-- @TODO : merging -->
     </footer>
   </body>
+
+
   <script>
     var docWidth = document.documentElement.offsetWidth;
     [].forEach.call(
