:style: css cleanup

--- a/menus/card_one.html
+++ b/menus/card_one.html
@@ -57,6 +57,7 @@
       <!-- @TODO : merging -->
     </footer>
   </body>
+  <link rel="stylesheet" href="../css/restaurants_menus.css" />
   <script>
     var docWidth = document.documentElement.offsetWidth;
     [].forEach.call(
