--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Shrikhand:wght@400;500;700&display=swap" rel="stylesheet">
     <!-- Project's built-in CSS files  -->
     <link rel="stylesheet" href="css/main.css" />
+    <link rel="stylesheet" href="css/header.css" />
+    <link rel="stylesheet" href="css/features.css" />
+    <link rel="stylesheet" href="css/restaurants_list.css" />
+    <link rel="stylesheet" href="css/footer.css" />
   </head>
   <body>
 
@@ -38,8 +42,8 @@
       </section> <!-- /.explore -->
 
 
-      <section class="features">
-        <h2>Fonctionnement</h2>
+      <section class="features overall-padding">
+        <h2 class="overall-section-titles">Fonctionnement</h2>
         <!-- Item #1 -->
         <div class="item">
           <p class="circle">1</p>
@@ -63,8 +67,8 @@
         </div> <!-- /.item -->
       </section> <!-- /.features -->
 
-      <section class="restaurants">
-        <h2>Restaurants</h2>
+      <section class="restaurants overall-padding">
+        <h2 class="overall-section-titles">Restaurants</h2>
 
         <!-- La palette du gout -->
         <section class="restaurant">
