:refactor: starting implementation of BEM

--- a/index.html
+++ b/index.html
@@ -16,26 +16,33 @@
     <link href="https://fonts.googleapis.com/css2?family=Shrikhand:wght@400;500;700&display=swap" rel="stylesheet">
     <!-- Project's built-in CSS files  -->
     <link rel="stylesheet" href="css/main.css" />
+    <link rel="stylesheet" href="css/header.css" />
+    <link rel="stylesheet" href="css/features.css" />
+    <link rel="stylesheet" href="css/restaurants_list.css" />
+    <link rel="stylesheet" href="css/footer.css" />
   </head>
   <body>
+    <!--
 
-    <header>
-      <img src="assets/logo/ohmyfood.png" />
+        Page header
+
+    -->
+    <header class="header">
+      <img class="header--img" src="assets/logo/ohmyfood.png" />
     </header>
-
     <main>
-      <section class="geo">
-          <i class="fa-solid fa-location-dot"></i>Paris, Belleville
-      </section> <!-- ./.geo -->
-      <section class="explore">
-        <h2>Réservez le menu qui vous convient</h2>
+      <!--
+          Head section
+      -->
+      <section class="head">
+        <i class="fa-solid fa-location-dot"></i>Paris, Belleville <h2>Réservez le menu qui vous convient</h2>
         <p>
           Découvrez des restaurants d'exception, séléctionés par nos soins.
         </p>
         <p class="explore-btn-container">
           <a class="explore-btn">Explorer nos restaurants</a>
         </p>
-      </section> <!-- /.explore -->
+      </section> <!-- /.head -->
 
 
       <section class="features">
