--- a/menus/card_one.html
+++ b/menus/card_one.html
@@ -15,11 +15,16 @@
     <link href="https://fonts.googleapis.com/css2?family=Shrikhand:wght@400;500;700&display=swap" rel="stylesheet">
     <!-- Project built-in CSS -->
     <link rel="stylesheet" href="../css/main.css" />
-    <link rel="stylesheet" href="../css/card_one.css" />
+    <link rel="stylesheet" href="../css/header.css" />
+    <link rel="stylesheet" href="../css/features.css" />
+    <link rel="stylesheet" href="../css/restaurants_list.css" />
+    <link rel="stylesheet" href="../css/restaurants_menus.css" />
+    <link rel="stylesheet" href="../css/footer.css" />
   </head>
   <body>
-    <header>
-      <i class="fa-solid fa-arrow-left"></i> <img src="../assets/logo/ohmyfood.png" />
+    <header class="header-menu--page">
+      <i class="header--back fa-solid fa-arrow-left"></i>
+      <img class="header-menu-page--img" src="../assets/logo/ohmyfood.png" />
     </header>
     <main>
       <!--
@@ -28,7 +33,7 @@
 
       -->
       <section class="menu">
-        <img src="../assets/restaurants/1.jpg" alt="Image de nourriture" />
+        <img class="section-menu--img" src="../assets/restaurants/1.jpg" alt="Image de nourriture" />
         <div class="menu_card">
           <!-- Restaurant title -->
           <div class="title">
