:fix: fixed restaurants' menus pages headers

--- a/menus/card_one.html
+++ b/menus/card_one.html
@@ -15,7 +15,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Shrikhand:wght@400;500;700&display=swap" rel="stylesheet">
     <!-- Project built-in CSS -->
     <link rel="stylesheet" href="../css/main.css" />
-<<<<<<< HEAD
     <link rel="stylesheet" href="../css/header.css" />
     <link rel="stylesheet" href="../css/features.css" />
     <link rel="stylesheet" href="../css/restaurants_list.css" />
@@ -23,29 +22,23 @@
     <link rel="stylesheet" href="../css/footer.css" />
   </head>
   <body>
-    <header class="header-menu--page">
-      <i class="header--back fa-solid fa-arrow-left"></i>
-      <img class="header-menu-page--img" src="../assets/logo/ohmyfood.png" />
-=======
-    <link rel="stylesheet" href="../css/card_one.css" />
-  </head>
-  <body>
-    <header>
-      <i class="fa-solid fa-arrow-left"></i> <img src="../assets/logo/ohmyfood.png" />
->>>>>>> card_one
+    <!--
+
+        Page header
+
+    -->
+    <header class="header">
+      <a href="index.html" class="header-a--back">
+        <i class="header-i--back fa-solid fa-arrow-left"></i>
+      </a>
+      <img class="header--img" src="../assets/logo/ohmyfood.png" />
     </header>
     <main>
       <!--
-
             Restaurant menu
-
       -->
       <section class="menu">
-<<<<<<< HEAD
         <img class="section-menu--img" src="../assets/restaurants/1.jpg" alt="Image de nourriture" />
-=======
-        <img src="../assets/restaurants/1.jpg" alt="Image de nourriture" />
->>>>>>> card_one
         <div class="menu_card">
           <!-- Restaurant title -->
           <div class="title">
@@ -65,33 +58,14 @@
             <p>
               <span>Et sa farandole de petits légumes</span>
               <span>25€</span>
-<<<<<<< HEAD
             </p>
-=======
->>>>>>> card_one
           </div> <!-- ./card -->
         </div> <!-- /.card_menu -->
       </section> <!-- /.menu -->
     </main>
     <footer>
-      <!-- @TODO : merging -->
+      <!-- @TODO -->
     </footer>
   </body>
-<<<<<<< HEAD
   <link rel="stylesheet" href="../css/restaurants_menus.css" />
-=======
-
-
->>>>>>> card_one
-  <script>
-    var docWidth = document.documentElement.offsetWidth;
-    [].forEach.call(
-      document.querySelectorAll('*'),
-      function(el) {
-        if (el.offsetWidth > docWidth) {
-          console.log(el);
-        }
-      }
-    );
-  </script>
 </html>
