--- a/menus/card_one.html
+++ b/menus/card_one.html
@@ -35,32 +35,49 @@
     </header>
     <main>
       <!--
+
             Restaurant menu
+
       -->
       <section class="menu">
-        <img class="section-menu--img" src="../assets/restaurants/1.jpg" alt="Image de nourriture" />
+        <img class="section-menu--img" src="../assets/restaurants/4.jpg" alt="Image de nourriture" />
         <div class="menu_card">
-          <!-- Restaurant title -->
+          <!--
+
+            Restaurant title
+
+          -->
           <div class="title">
             <h2>Le délices des sens</h2>
             <i class="fa-regular fa-heart"></i>
           </div> <!-- ./title -->
-          <!-- Card # 1 -->
-          <div class="card">
-            <h3>Tartare de thon</h3>
+          <!--
+              Restaurant menu category "" entrées ""
+          -->
+          <p class="menu-card-category overall-restaurant-pres-margin">
+            Entrées
+            <div class="menu-card-categ-line--div overall-restaurant-pres-margin"></div>
+          </p> <!-- /.subtitle -->
+          <!--
+              Card #1
+          -->
+          <div class="card overall-restaurant-pres-margin">
+            <h3 class="card-title">Tartare de thon</h3>
             <p>
               <span>Assaisonné de thon</span>
               <span>25€</span>
           </div> <!-- ./card -->
-          <!-- Card # 1 -->
-          <div class="card">
-            <h3>Bouchée de homard croustillant</h3>
+          <!--
+              Card #2
+          -->
+          <div class="card overall-restaurant-pres-margin">
+            <h3 class="card-title">Bouchée de homard croustillant</h3>
             <p>
               <span>Et sa farandole de petits légumes</span>
               <span>25€</span>
             </p>
           </div> <!-- ./card -->
-        </div> <!-- /.card_menu -->
+        </div> <!-- /.menu_card -->
       </section> <!-- /.menu -->
     </main>
     <footer>
