:feat: ' entrées ' menu has been completed

--- a/menus/card_one.html
+++ b/menus/card_one.html
@@ -77,12 +77,43 @@
               <span>25€</span>
             </p>
           </div> <!-- ./card -->
+          <!--
+              Card #3
+          -->
+          <div class="card overall-restaurant-pres-margin">
+            <h3 class="card-title">Homard et espuma de chou fleur</h3>
+            <p>
+              <span>Marié aux zests d'orange</span>
+              <span>20€</span>
+            </p>
+          </div> <!-- ./card -->
+          <div class="card overall-restaurant-pres-margin">
+            <h3 class="card-title">Homard et espuma de chou fleur</h3>
+            <p>
+              <span>Marié aux zests d'orange</span>
+              <span>20€</span>
+            </p>
+          </div> <!-- ./card -->
+          <!--
+              Card #4
+          -->
+          <div class="card overall-restaurant-pres-margin">
+            <h3 class="card-title">Foie gras de canard cuit entier</h3>
+            <p>
+              <span>Configure de figues et pain toasté</span>
+              <span>25€</span>
+            </p>
+          </div> <!-- ./card -->
+          <div class="card overall-restaurant-pres-margin">
+            <h3 class="card-title">Homard et espuma de chou fleur</h3>
+            <p>
+              <span>Marié aux zests d'orange</span>
+              <span>20€</span>
+            </p>
+          </div> <!-- ./card -->
         </div> <!-- /.menu_card -->
       </section> <!-- /.menu -->
     </main>
-    <footer>
-      <!-- @TODO -->
-    </footer>
   </body>
   <link rel="stylesheet" href="../css/restaurants_menus.css" />
 </html>
