:test: restaurant menus cards animation

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
         <!-- La palette du gout -->
         <section class="restaurant">
-          <div class="card">
+          <div class="card card-restaurant">
             <div class="new">Nouveau</div>
             <img src="assets/restaurants/1.jpg" />
             <div class="flex">
@@ -100,7 +100,7 @@
 
         <!-- La note enchantée -->
         <section class="restaurant">
-          <div class="card">
+          <div class="card card-restaurant">
             <div class="new">Nouveau</div>
             <img src="assets/restaurants/2.jpg" />
             <div class="flex">
@@ -117,7 +117,7 @@
 
         <!-- A la française -->
         <section class="restaurant">
-          <div class="card">
+          <div class="card card-restaurant">
             <img src="assets/restaurants/3.jpg" />
             <div class="flex">
               <div>
@@ -133,7 +133,7 @@
 
         <!-- Le délice des sens -->
         <section class="restaurant">
-          <div class="card">
+          <div class="card card-restaurant">
             <img src="assets/restaurants/4.jpg" />
             <div class="flex">
               <div>
