--- a/menus/delice_des_sens.html
+++ b/menus/delice_des_sens.html
@@ -61,16 +61,18 @@
           <!--
               Card #1
           -->
-          <div class="card overall-restaurant-pres-margin">
+          <div class="card card-restaurant overall-restaurant-pres-margin">
             <h3 class="card-title">Tartare de thon</h3>
             <p>
               <span>Assaisonné de thon</span>
               <span>25€</span>
+            </p>
+            <div class="card-select--div">OK</div> <!-- /.card-select-div -->
           </div> <!-- ./card -->
           <!--
               Card #2
           -->
-          <div class="card overall-restaurant-pres-margin">
+          <div class="card card-restaurant overall-restaurant-pres-margin">
             <h3 class="card-title">Bouchée de homard croustillant</h3>
             <p>
               <span>Et sa farandole de petits légumes</span>
@@ -80,14 +82,14 @@
           <!--
               Card #3
           -->
-          <div class="card overall-restaurant-pres-margin">
+          <div class="card card-restaurant overall-restaurant-pres-margin">
             <h3 class="card-title">Homard et espuma de chou fleur</h3>
             <p>
               <span>Marié aux zests d'orange</span>
               <span>20€</span>
             </p>
           </div> <!-- ./card -->
-          <div class="card overall-restaurant-pres-margin">
+          <div class="card card-restaurant overall-restaurant-pres-margin">
             <h3 class="card-title">Homard et espuma de chou fleur</h3>
             <p>
               <span>Marié aux zests d'orange</span>
