--- a/index.html
+++ b/index.html
@@ -34,12 +34,14 @@
     <header class="header">
       <img class="header--img" src="assets/logo/ohmyfood.png" />
     </header>
-    <main>
+    <main>t 3
       <!--
           Head section
       -->
       <section class="head">
-        <i class="fa-solid fa-location-dot"></i>Paris, Belleville <h2>Réservez le menu qui vous convient</h2>
+        <div class="head-location">
+          <i class="fa-solid fa-location-dot"></i>Paris, Belleville <h2>Réservez le menu qui vous convient</h2>
+        </div>
         <p>
           Découvrez des restaurants d'exception, séléctionés par nos soins.
         </p>
