--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- Roboto font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
     <!-- Project logo font -->
     <link href="https://fonts.googleapis.com/css2?family=Shrikhand:wght@400;500;700&display=swap" rel="stylesheet">
     <!-- Project's built-in CSS files  -->
@@ -34,23 +34,27 @@
     <header class="header">
       <img class="header--img" src="assets/logo/ohmyfood.png" />
     </header>
-    <main>t 3
+    <main>
       <!--
-          Head section
+          """ Head """ section
       -->
-      <section class="head">
-        <div class="head-location">
-          <i class="fa-solid fa-location-dot"></i>Paris, Belleville <h2>Réservez le menu qui vous convient</h2>
-        </div>
-        <p>
-          Découvrez des restaurants d'exception, séléctionés par nos soins.
-        </p>
+      <section class="head bg-light-alt">
+        <div class="head-location bg-light">
+            <i class="head-location--i fa-solid fa-location-dot"></i>Paris, Belleville
+        </div> <!-- /.head-location -->
+        <div class="head-title mrg-top-none">
+          <h2 class="head-title--h2">Réservez le menu qui vous convient</h2>
+          <p class="head-subtitle--p overall-padding pdg-top-none pdg-btm-none">
+            Découvrez des restaurants d'exception, séléctionnés par nos soins.
+          </p> <!-- /head-subtitle-p -->
+        </div> <!-- /.head-title -->
         <p class="explore-btn-container">
           <a class="explore-btn">Explorer nos restaurants</a>
-        </p>
+        </p> <!-- /explore-btn-container -->
       </section> <!-- /.head -->
-
-
+      <!--
+          """ Features """ section
+      -->
       <section class="features overall-padding">
         <h2 class="overall-section-titles">Fonctionnement</h2>
         <!-- Item #1 -->
@@ -78,8 +82,9 @@
 
       <section class="restaurants overall-padding">
         <h2 class="overall-section-titles">Restaurants</h2>
-
-        <!-- La palette du gout -->
+        <!--
+            La palette du gout
+        -->
         <section class="restaurant">
           <div class="card card-restaurant">
             <div class="new">Nouveau</div>
@@ -99,8 +104,9 @@
             </div> <!-- /.flex -->
           </div>
         </section> <!-- /.restaurant -->
-
-        <!-- La note enchantée -->
+        <!--
+            La note enchantée
+        -->
         <section class="restaurant">
           <div class="card card-restaurant">
             <div class="new">Nouveau</div>
@@ -116,8 +122,9 @@
             </div> <!-- /.flex -->
           </div> <!-- /.card -->
         </section> <!-- /.restaurant -->
-
-        <!-- A la française -->
+        <!--
+            A la française
+        -->
         <section class="restaurant">
           <div class="card card-restaurant">
             <img src="assets/restaurants/3.jpg" />
@@ -132,8 +139,9 @@
             </div> <!-- /.flex -->
           </div>
         </section> <!-- /.restaurant -->
-
-        <!-- Le délice des sens -->
+        <!--
+          Le délice des sens
+        -->
         <section class="restaurant">
           <div class="card card-restaurant">
             <img src="assets/restaurants/4.jpg" />
@@ -150,6 +158,11 @@
         </section> <!-- /.restaurant -->
       </section> <!-- /.restaurants -->
     </main>
+    <!--
+
+        Footer
+
+    -->
     <footer>
       <h1>ohmyfood</h1>
       <ul>
