:refactor: refactored homepage

--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@
     </header>
     <main>
       <!--
+
           """ Head """ section
+
       -->
       <section class="head bg-light-alt">
         <div class="head-location bg-light">
@@ -44,7 +46,7 @@
         </div> <!-- /.head-location -->
         <div class="head-title mrg-top-none">
           <h2 class="head-title--h2">Réservez le menu qui vous convient</h2>
-          <p class="head-subtitle--p overall-padding pdg-top-none pdg-btm-none">
+          <p class="head-subtitle--p pdg">
             Découvrez des restaurants d'exception, séléctionnés par nos soins.
           </p> <!-- /head-subtitle-p -->
         </div> <!-- /.head-title -->
@@ -53,29 +55,37 @@
         </p> <!-- /explore-btn-container -->
       </section> <!-- /.head -->
       <!--
+
           """ Features """ section
+
       -->
       <section class="features overall-padding">
         <h2 class="overall-section-titles">Fonctionnement</h2>
-        <!-- Item #1 -->
+        <!--
+             Item #1
+        -->
         <div class="item">
           <p class="circle">1</p>
           <p>
             <i class="fa-solid fa-mobile-screen"></i>Choisissez un restaurant
           </p>
         </div> <!-- /.item -->
-        <!-- Item #2 -->
+        <!--
+             Item #2
+        -->
         <div class="item">
           <p class="circle">2</p>
           <p>
             <i class="fa-solid fa-list"></i>Composez votre menu
           </p>
         </div> <!-- /.item -->
-        <!-- Item #3 -->
+        <!--
+            Item #3
+        -->
         <div class="item">
           <p class="circle">3</p>
           <p>
-            <i class="fa-solid fa-bowl-food"></i>Dégustez au restaurant
+            <i class="fa-solid fa-store"></i>Dégustez au restaurant
           </p>
         </div> <!-- /.item -->
       </section> <!-- /.features -->
@@ -92,7 +102,7 @@
             <div class="flex">
               <div>
                 <h3>
-                    <a href="menus/card_one.html">
+                    <a class="link-black no-decoration" href="menus/card_one.html">
                       La palette du gout
                     </a>
                 </h3>
@@ -113,7 +123,11 @@
             <img src="assets/restaurants/2.jpg" />
             <div class="flex">
               <div>
-                <h3>La note enchantée</h3>
+                <h3>
+                  <a class="link-black no-decoration" href="#">
+                    La note enchantée
+                  </a>
+                </h3>
                 <p>Charonne</p>
               </div>
               <div>
@@ -130,7 +144,11 @@
             <img src="assets/restaurants/3.jpg" />
             <div class="flex">
               <div>
-                <h3>A la française</h3>
+                <h3>
+                  <a class="link-black no-decoration" href="menus/card_one.html">
+                    A la française
+                  </a>
+                </h3>
                 <p>Cité Rouge</p>
               </div>
               <div>
@@ -147,7 +165,11 @@
             <img src="assets/restaurants/4.jpg" />
             <div class="flex">
               <div>
-                <h3>A la française</h3>
+                <h3>
+                  <a class="link-black no-decoration" href="menus/card_one.html">
+                    Le délice des sens
+                  </a>
+                </h3>
                 <p>Folie Méricourt</p>
               </div>
               <div>
