:refactor: refactored footer, spacing corrections

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>OhMyFood</title>
     <meta charset="utf-8" />
+    <meta name="description" content="Découvrez des restaurants d'exception, selectionnés par nos soins" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- normalize.css -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -50,6 +51,9 @@
             Découvrez des restaurants d'exception, séléctionnés par nos soins.
           </p> <!-- /head-subtitle-p -->
         </div> <!-- /.head-title -->
+        <!--
+            Explore button
+        -->
         <p class="explore-btn-container">
           <a class="explore-btn">Explorer nos restaurants</a>
         </p> <!-- /explore-btn-container -->
@@ -186,12 +190,12 @@
 
     -->
     <footer>
-      <h1>ohmyfood</h1>
-      <ul>
-        <li>Poposer un restaurant</li>
-        <li>Devenir partenaire</li>
-        <li>Mention légale</li>
-        <li>Contact</li>
+      <h1 class="footer-title--h1">ohmyfood</h1>
+      <ul class="footer-links-list--ul">
+        <li class="footer-links-list--li"><i class="footer-icon--i fa-solid fa-utensils"></i>Poposer un restaurant</li>
+        <li class="footer-links-list--li"><i class="footer-icon--i fa-solid fa-handshake-angle"></i>Devenir partenaire</li>
+        <li class="footer-links-list--li">Mentions légales</li>
+        <li class="footer-links-list--li">Contact</li>
       </ul>
     </footer>
   </body>
