:refactor: refactored footer, spacing corrections

--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
     -->
     <footer>
       <h1 class="footer-title--h1">ohmyfood</h1>
-      <ul class="footer-links-list--ul">
+      <ul class="footer-links-list-ul">
         <li class="footer-links-list--li"><i class="footer-icon--i fa-solid fa-utensils"></i>Poposer un restaurant</li>
         <li class="footer-links-list--li"><i class="footer-icon--i fa-solid fa-handshake-angle"></i>Devenir partenaire</li>
         <li class="footer-links-list--li">Mentions légales</li>
