:refactor: starting BEM syntax, creating restaurant pages, etc..

--- a/index.html
+++ b/index.html
@@ -97,6 +97,11 @@
       <section class="restaurants overall-padding">
         <h2 class="overall-section-titles">Restaurants</h2>
         <!--
+
+            """ Restaurants list """ section
+
+        -->
+        <!--
             La palette du gout
         -->
         <section class="restaurant">
@@ -106,7 +111,7 @@
             <div class="flex">
               <div>
                 <h3>
-                    <a class="link-black no-decoration" href="menus/card_one.html">
+                    <a class="link-black no-decoration" href="restaurants/la_palette_du_gout.html">
                       La palette du gout
                     </a>
                 </h3>
@@ -128,7 +133,7 @@
             <div class="flex">
               <div>
                 <h3>
-                  <a class="link-black no-decoration" href="#">
+                  <a class="link-black no-decoration" href="restaurants/la_note_enchantee.html">
                     La note enchantée
                   </a>
                 </h3>
@@ -149,7 +154,7 @@
             <div class="flex">
               <div>
                 <h3>
-                  <a class="link-black no-decoration" href="menus/card_one.html">
+                  <a class="link-black no-decoration" href="restaurants/a_la_francaise.html">
                     A la française
                   </a>
                 </h3>
@@ -170,7 +175,7 @@
             <div class="flex">
               <div>
                 <h3>
-                  <a class="link-black no-decoration" href="menus/card_one.html">
+                  <a class="link-black no-decoration" href="restaurants/le_delice_des_sens.html">
                     Le délice des sens
                   </a>
                 </h3>
@@ -191,7 +196,7 @@
     -->
     <footer>
       <h1 class="footer-title--h1">ohmyfood</h1>
-      <ul class="footer-links-list-ul">
+      <ul class="footer-links-list--ul">
         <li class="footer-links-list--li"><i class="footer-icon--i fa-solid fa-utensils"></i>Poposer un restaurant</li>
         <li class="footer-links-list--li"><i class="footer-icon--i fa-solid fa-handshake-angle"></i>Devenir partenaire</li>
         <li class="footer-links-list--li">Mentions légales</li>
