:refactor: BEM syntax

--- a/restaurants/le_delice_des_sens.html
+++ b/restaurants/le_delice_des_sens.html
@@ -41,14 +41,14 @@
       -->
       <section class="menu">
         <img class="section-menu--img" src="../assets/restaurants/4.jpg" alt="Image de nourriture" />
-        <div class="menu_card">
+        <div class="menu-card">
           <!--
 
             Restaurant title
 
           -->
-          <div class="title">
-            <h2>Le délices des sens</h2>
+          <div class="menu-card-title--div">
+            <h2 class="menu-card-title--h2">Le délices des sens</h2>
             <i class="fa-regular fa-heart"></i>
           </div> <!-- ./title -->
           <!--
@@ -113,7 +113,7 @@
               <span>20€</span>
             </p>
           </div> <!-- ./card -->
-        </div> <!-- /.menu_card -->
+        </div> <!-- /.menu-card -->
       </section> <!-- /.menu -->
     </main>
   </body>
