--- a/restaurants/le_delice_des_sens.html
+++ b/restaurants/le_delice_des_sens.html
@@ -49,7 +49,8 @@
           -->
           <div class="menu-card-title--div">
             <h2 class="menu-card-title--h2">Le délices des sens</h2>
-            <i class="fa-regular fa-heart"></i>
+            <i class="
+             fa-regular fa-heart"></i>
           </div> <!-- ./title -->
           <!--
               Restaurant menu category "" entrées ""
