:feat: restaurant menu cards hovering animation basic logic

--- a/restaurants/le_delice_des_sens.html
+++ b/restaurants/le_delice_des_sens.html
@@ -49,8 +49,7 @@
           -->
           <div class="menu-card-title--div">
             <h2 class="menu-card-title--h2">Le délices des sens</h2>
-            <i class="
-             fa-regular fa-heart"></i>
+            <i class="menu-card-heart-icon--i fa-regular fa-heart"></i>
           </div> <!-- ./title -->
           <!--
               Restaurant menu category "" entrées ""
@@ -60,60 +59,65 @@
             <div class="menu-card-categ-line--div overall-restaurant-pres-margin"></div>
           </p> <!-- /.subtitle -->
           <!--
-              Card #1
+
+              Card #1 - Tartare de thon
+
           -->
-          <div class="card card-restaurant overall-restaurant-pres-margin">
-            <h3 class="card-title">Tartare de thon</h3>
-            <p>
-              <span>Assaisonné de thon</span>
-              <span>25€</span>
-            </p>
-            <div class="card-select--div">OK</div> <!-- /.card-select-div -->
-          </div> <!-- ./card -->
+          <div class="card-restaurant-container d-flex">
+            <div class="card card-restaurant card--restaurant-left card--restaurant-pdg overall-restaurant-pres-margin
+                        mrg-right-none radius-top-right-none radius-bottom-right-none">
+              <h3 class="card-title">Tartare de thon</h3>
+              <p class="card-description">
+                Assaisonné de yuzu
+              </p>
+            </div> <!-- /.card -->
+            <div class="card card--restaurant-pdg card-price overall-restaurant-pres-margin mrg-left-none">
+              <p class="card-price--p">20€</p>
+            </div> <!-- /.card .card-price -->
+            <div class="card card--restaurant-pdg card-hovered-area d-none overall-restaurant-pres-margin mrg-left-none">
+              <i class="card-restaurant-check--i fa-sharp fa-solid fa-circle-check"></i>
+            </div> <!--/.card .card-hovered-area -->
+          </div> <!-- ./card-restaurant-container card-flex -->
           <!--
-              Card #2
+
+              Card #2 - Bouchée de homard croustillant
+
           -->
-          <div class="card card-restaurant overall-restaurant-pres-margin">
-            <h3 class="card-title">Bouchée de homard croustillant</h3>
-            <p>
-              <span>Et sa farandole de petits légumes</span>
-              <span>25€</span>
-            </p>
-          </div> <!-- ./card -->
+          <div class="card-restaurant-container d-flex">
+            <div class="card card-restaurant card--restaurant-left card--restaurant-pdg overall-restaurant-pres-margin
+                        mrg-right-none radius-top-right-none radius-bottom-right-none">
+              <h3 class="card-title">Bouchée de homard croustillant</h3>
+              <p class="card-description">
+                Et sa farandole de petits légumes
+              </p>
+            </div> <!-- /.card -->
+            <div class="card card--restaurant-pdg card-price overall-restaurant-pres-margin mrg-left-none">
+              <p class="card-price--p">25€</p>
+            </div> <!-- /.card .card-price -->
+            <div class="card card--restaurant-pdg card-hovered-area d-none overall-restaurant-pres-margin mrg-left-none">
+              <i class="card-restaurant-check--i fa-sharp fa-solid fa-circle-check"></i>
+            </div> <!--/.card .card-hovered-area -->
+          </div> <!-- ./card-restaurant-container card-flex -->
           <!--
-              Card #3
+
+              Card #3 - Velouté de cèpes
+
           -->
-          <div class="card card-restaurant overall-restaurant-pres-margin">
-            <h3 class="card-title">Homard et espuma de chou fleur</h3>
-            <p>
-              <span>Marié aux zests d'orange</span>
-              <span>20€</span>
-            </p>
-          </div> <!-- ./card -->
-          <div class="card card-restaurant overall-restaurant-pres-margin">
-            <h3 class="card-title">Homard et espuma de chou fleur</h3>
-            <p>
-              <span>Marié aux zests d'orange</span>
-              <span>20€</span>
-            </p>
-          </div> <!-- ./card -->
-          <!--
-              Card #4
-          -->
-          <div class="card overall-restaurant-pres-margin">
-            <h3 class="card-title">Foie gras de canard cuit entier</h3>
-            <p>
-              <span>Configure de figues et pain toasté</span>
-              <span>25€</span>
-            </p>
-          </div> <!-- ./card -->
-          <div class="card overall-restaurant-pres-margin">
-            <h3 class="card-title">Homard et espuma de chou fleur</h3>
-            <p>
-              <span>Marié aux zests d'orange</span>
-              <span>20€</span>
-            </p>
-          </div> <!-- ./card -->
+          <div class="card-restaurant-container d-flex">
+            <div class="card card-restaurant card--restaurant-left card--restaurant-pdg overall-restaurant-pres-margin
+                        mrg-right-none radius-top-right-none radius-bottom-right-none">
+              <h3 class="card-title">Velouté de cèpes</h3>
+              <p class="card-description">
+                Aux truffes
+              </p>
+            </div> <!-- /.card -->
+            <div class="card card--restaurant-pdg card-price overall-restaurant-pres-margin mrg-left-none">
+              <p class="card-price--p">35€</p>
+            </div> <!-- /.card .card-price -->
+            <div class="card card--restaurant-pdg card-hovered-area d-none overall-restaurant-pres-margin mrg-left-none">
+              <i class="card-restaurant-check--i fa-sharp fa-solid fa-circle-check"></i>
+            </div> <!--/.card .card-hovered-area -->
+          </div> <!-- ./card-restaurant-container card-flex -->
         </div> <!-- /.menu-card -->
       </section> <!-- /.menu -->
     </main>
