:fix: restaurant menu card hovering bug

--- a/restaurants/le_delice_des_sens.html
+++ b/restaurants/le_delice_des_sens.html
@@ -66,7 +66,7 @@
           <div class="card-restaurant-container d-flex">
             <div class="card card-restaurant card--restaurant-left card--restaurant-pdg overall-restaurant-pres-margin
                         mrg-right-none radius-top-right-none radius-bottom-right-none">
-              <h3 class="card-title">Tartare de thon</h3>
+              <h3 class="card-title-h3">Tartare de thon</h3>
               <p class="card-description">
                 Assaisonné de yuzu
               </p>
@@ -86,7 +86,7 @@
           <div class="card-restaurant-container d-flex">
             <div class="card card-restaurant card--restaurant-left card--restaurant-pdg overall-restaurant-pres-margin
                         mrg-right-none radius-top-right-none radius-bottom-right-none">
-              <h3 class="card-title">Bouchée de homard croustillant</h3>
+              <h3 class="card-title-h3">Bouchée de homard croustillant</h3>
               <p class="card-description">
                 Et sa farandole de petits légumes
               </p>
@@ -106,7 +106,7 @@
           <div class="card-restaurant-container d-flex">
             <div class="card card-restaurant card--restaurant-left card--restaurant-pdg overall-restaurant-pres-margin
                         mrg-right-none radius-top-right-none radius-bottom-right-none">
-              <h3 class="card-title">Velouté de cèpes</h3>
+              <h3 class="card-title-h3">Velouté de cèpes</h3>
               <p class="card-description">
                 Aux truffes
               </p>
